--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IronMan</title>
+    <title>Amazon</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>Iron Man</p>
+    <div class="main">
+        <div class="hero_div">
+            <nav>
+                <ul>
+                    <li><a href="#"><img src="something" alt="Amazon Logo"></a></li>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">EBooks</a></li>
+                    <li><a href="#">Audible</a></li>
+                </ul>
+            </nav>
+            <div class="header">
+                <div class="header_left">
+                    <h1>Amazon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                       Provident, quaerat ex odio debitis labore magnam accusantium aliquam.
+                    </p>
+                    <button></button>
+                </div>
+                <div class="header_right">
+                    <img src="smthn2" alt="Amazon">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
