Add 'Show Now!' button to hero division
Add the 'Show Now!' button to the previously changed div.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                        Provident, quaerat ex odio debitis labore magnam accusantium aliquam.
                     </p>
-                    <button></button>
+                    <button>Shop Now!</button>
                 </div>
                 <div class="header_right">
                     <img src="smthn2" alt="Amazon">
