--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
     <div class="main">
@@ -12,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="#"><img src="something" alt="Amazon Logo"></a></li>
-                    <li><a href="#">Store</a></li>
+                    <li class="right"><a href="#">Store</a></li>
                     <li><a href="#">EBooks</a></li>
                     <li><a href="#">Audible</a></li>
                 </ul>
@@ -26,7 +27,7 @@
                     <button>Shop Now!</button>
                 </div>
                 <div class="header_right">
-                    <img src="smthn2" alt="Amazon">
+                    <img src="https://placehold.co/300x200" alt="Amazon">
                 </div>
             </div>
         </div>
