Fix padding and width issues and design button
Fixed padding and width issues for the header and changed css
for the button in the header, hence making the header complete.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
             </nav>
             <div class="header">
                 <div class="header_left">
-                    <h1>Amazon</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                       Provident, quaerat ex odio debitis labore magnam accusantium aliquam.
+                    <h1>Amazon: Elevate Your Shopping Experience</h1>
+                    <p>Discover endless choices, unbeatable deals, and swift Amazon delivery. Redefining convenience for a seamless and satisfying shopping experience.
                     </p>
-                    <button>Shop Now!</button>
+                    <button>Sign Up</button>
                 </div>
                 <div class="header_right">
-                    <img src="https://placehold.co/600x200" alt="Amazon">
+                    <img src="https://placehold.co/450x250" alt="Amazon">
                 </div>
             </div>
         </div>
