Added second and third divs as per website image
Obviously forgot to update progress on git, so a huge sum of
changes:
- Added div 2 for the extra information
- Added div 3 for the testimonial
- Added appropriate css for both the divs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="main">
+
         <div class="hero_div">
             <nav>
                 <ul>
@@ -29,6 +30,47 @@
                     <img src="https://placehold.co/450x250" alt="Amazon">
                 </div>
             </div>
+        </div>
+
+        <div class="div2">
+            <h2>
+                Get to Know Us!
+            </h2>
+            <div class="info_container">
+                <div class="info">
+                    <div class="box">
+                    </div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quos eius quia esse dolorem veritatis hic aspernatur doloremque laudantium numquam? 
+                    </p>
+                </div>
+                <div class="info">
+                    <div class="box">
+                    </div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quos eius quia esse dolorem veritatis hic aspernatur doloremque laudantium numquam? 
+                    </p>
+                </div>
+                <div class="info">
+                    <div class="box">
+                    </div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quos eius quia esse dolorem veritatis hic aspernatur doloremque laudantium numquam? 
+                    </p>
+                </div>
+                <div class="info">
+                    <div class="box">
+                    </div>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quos eius quia esse dolorem veritatis hic aspernatur doloremque laudantium numquam? 
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="div3">
+            <p id="testimonial">Absolutely thrilled with my purchase! The product exceeded my expectations, and the customer service was outstanding. A game-changer for sure</p>
+            <p id="author">-Emily S., Los Angeles</p>
         </div>
     </div>
 </body>
