--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             <p id="testimonial">Absolutely thrilled with my purchase! The product exceeded my expectations, and the customer service was outstanding. A game-changer for sure</p>
             <p id="author">-Emily S., Los Angeles</p>
         </div>
+
+        <div class="div4">
+            <div class="blue_container">
+                <div class="text">
+                    <p id="header1">Sign Up and Shop Now!</p>
+                    <p id="content1">Explore our wide range of products by clicking the button right over there!</p>
+                </div>
+                <div class="button2">
+                    <button id="button2">Sign Up</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
