--- a/index.html
+++ b/index.html
@@ -85,5 +85,9 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>Copyright &copy; Parth Rasal 2024</p>
+    </footer>
 </body>
 </html>
