Make some typo changes and wrap things in flexbox
Changed some minute details and added flex wrap to header div and
div 2.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="div3">
-            <p id="testimonial">Absolutely thrilled with my purchase! The product exceeded my expectations, and the customer service was outstanding. A game-changer for sure</p>
+            <p id="testimonial">Absolutely thrilled with my purchase! The product exceeded my expectations, and the customer service was outstanding. A game-changer for sure!</p>
             <p id="author">-Emily S., Los Angeles</p>
         </div>
 
